# nanopore_sim_rs

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: args.rs  errors.rs  main.rs  utils.rs
src/simulate/: counts.rs  mod.rs  reads.rs
