[package]
name = "nanopore_sim_rs"
version = "0.0.1"
edition = "2024"

[dependencies]
needletail = { version = "0.6.3" }
rand = { version = "0.9.2", features = ['alloc'] }
clap = { version = "4.5.39", features = ["derive"] }
log = { version = "0.4.27" }
simple_logger = { version = "5.0.0" }
flate2 = { version = "1.1.1" }
anyhow = { version = "1.0.99" }
lazy_static = { version = "1.5.0" }
rayon = { version = "1.10.0" }
indicatif = { version = "0.18.0" }
