[package]
name = "nanopore_sim_rs"
version = "0.0.1"
edition = "2024"

[dependencies]
needletail = { version = "0.6.3" }
rand = { version = "0.9.2", features = ['alloc'] }
clap = { version = "4.5.53", features = ["derive"] }
log = { version = "0.4.29" }
simple_logger = { version = "5.1.0" }
flate2 = { version = "1.1.5" }
thiserror = { version = "2.0" }
lazy_static = { version = "1.5.0" }
rayon = { version = "1.11.0" }
indicatif = { version = "0.18.3" }

[dev-dependencies]
rstest = { version = "0.26.1" }
